2011-02-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (formatSparseM): align="right" accidentally did
	not use zero.print at all.
	print/format sparse Matrix: fix align="right" and improve docu

2011-02-17  Douglas Bates <bates@stat.wisc.edu>

	* DESCRIPTION: Remove Encoding: directive.

2011-02-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* inst/doc/sparseModels.Rnw: use png for large graphics (suggestion from
	  Brian)

2011-02-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/symmpart.Rd: update, thanks to Spencer Graves' prompting.

2011-01-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/CHMfactor.R (determinant(<CHMfactor>)): no longer warn about
	incompatible change of 2009-09-01.

2011-01-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/nearPD.R (nearPD): better error message when all eigenvalues
	are (at least close to) negative.

2010-12-18  Martin Maechler  <maechler@stat.math.ethz.ch>

>>>>>>>	1.0-0 ?? <<<<<<<<<<<<<<<<<<<
	* DESCRIPTION (Version): 0.999375-47, CRAN-released: .., r..

	* R/spModels.R, NAMESPACE: remove model.Matrix();
	we had deprecated it for about four months now.

2010-12-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/eigen.R,...: use full argument names;
	* R/*.R: get rid of more from
		checkUsagePackage("Matrix", suppressPartialMatchArgs = FALSE)

2010-12-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-46, CRAN-released: 2010-12-14, r2633

	* R/products.R: dimension fixing in some Matrix o vector  [t]crossprod()s.

	* src/Csparse.c (nz2Csparse, nz_pattern_to_Csparse): new utilities,
	callable from C and R.
	(Csparse_dense_prod): check pattern matrix and coerce to "d..".
	* tests/Simple.R: testing  <n.Matrix> %*% <dense>

	* R/ngCMatrix.R, R/nsCMatrix.R, .. : use the new fast coercions.

2010-10-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-45, CRAN-released: 2010-11-10, r2624
